[tool.poetry]
name = "ommnia-sso-tokens"
version = "1.0.7"
description = "The tokens used by the Ommnia SSO system."
authors = ["Luke A.C.A. Rieff - Ommnia Systems"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.9.0"
pydantic = "^2.8.2"
ommnia-permission-tree = {git = "https://github.com/ommnia-lrieff/ommnia_permission_tree.git", tag="v1.0.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
